[gd_scene load_steps=14 format=3 uid="uid://bived31tg1brm"]

[ext_resource type="Script" path="res://3D/Scripts/Brothers/Player_Camera.gd" id="1_xen6v"]
[ext_resource type="PackedScene" uid="uid://bdybpifdrhrvm" path="res://3D/Assets/Placeholder/Characters/OlderSibling_Placeholder.glb" id="2_m1ibo"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/State_Machine_Older.gd" id="3_bjnb2"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Idle.gd" id="4_ford2"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Walk.gd" id="5_xjdr7"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Run.gd" id="6_dh2d4"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Jump.gd" id="7_1pd3o"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Fall.gd" id="8_cbfxk"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Grab.gd" id="9_okwd0"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Hang.gd" id="10_mv7p7"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Climb.gd" id="11_t04ax"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Older_State_Machine/Older_Shimmy.gd" id="12_wnlxi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_klf3k"]
radius = 0.308549
height = 1.7

[node name="OlderBrother" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03182, 0)
collision_layer = 2
collision_mask = 15
script = ExtResource("1_xen6v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.153533, 0)
shape = SubResource("CapsuleShape3D_klf3k")

[node name="PlayerVisual" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="OlderSibling_Placeholder" parent="PlayerVisual" instance=ExtResource("2_m1ibo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0146236, -1, 0)

[node name="Rays" type="Node3D" parent="PlayerVisual"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.153533, 0)

[node name="ChestRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true

[node name="Chest" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.240832, 0)
target_position = Vector3(0, 0, -0.6)
hit_from_inside = true

[node name="Chest2" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.241, 0)
target_position = Vector3(0, 0, -0.6)
hit_from_inside = true

[node name="Chest3" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.241, 0)
target_position = Vector3(0, 0, -0.6)
hit_from_inside = true

[node name="HeadClimbRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269711, 0)

[node name="Head" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.670131, 0)
target_position = Vector3(0, 0, -1)
hit_from_inside = true

[node name="Head2" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.670131, 0)
target_position = Vector3(0, 0, -1)
hit_from_inside = true

[node name="Head3" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.670131, 0)
target_position = Vector3(0, 0, -1)
hit_from_inside = true

[node name="Head4" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.670131, 0)
target_position = Vector3(0, 1.8, -1)
hit_from_inside = true

[node name="Head5" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.670131, 0)
target_position = Vector3(0, 1.8, -1)
hit_from_inside = true

[node name="Head6" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.670131, 0)
target_position = Vector3(0, 1.8, -1)
hit_from_inside = true

[node name="LedgeHeight" type="RayCast3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00109506, 0.934371, -0.685304)
hit_from_inside = true

[node name="LedgeRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.302309, 0.0811958)

[node name="Ledge" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.244, -0.4)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="Ledge2" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.244, -0.4)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="Ledge3" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.244, -0.4)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="LipRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.302309, 0.0811958)

[node name="Lip" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.167, -0.4)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="Lip2" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.167, -0.4)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="Lip3" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.167, -0.4)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="PlayerNormal" type="RayCast3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1)
hit_from_inside = true

[node name="State Machine Older" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_bjnb2")
initial_state = NodePath("Older_Idle")

[node name="Older_Idle" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("4_ford2")
older_brother = NodePath("../..")

[node name="Older_Walk" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("5_xjdr7")
older_brother = NodePath("../..")

[node name="Older_Run" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("6_dh2d4")
older_brother = NodePath("../..")

[node name="Older_Jump" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("7_1pd3o")
older_brother = NodePath("../..")

[node name="Older_Fall" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("8_cbfxk")
older_brother = NodePath("../..")

[node name="Older_Grab" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("9_okwd0")
older_brother = NodePath("../..")

[node name="Older_Hang" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("10_mv7p7")
older_brother = NodePath("../..")

[node name="Older_Climb" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("11_t04ax")
older_brother = NodePath("../..")

[node name="Older_Shimmy" type="Node" parent="State Machine Older" node_paths=PackedStringArray("older_brother")]
script = ExtResource("12_wnlxi")
older_brother = NodePath("../..")
